Prevent margin collapse

--- a/src/_scss/_portfolio.scss
+++ b/src/_scss/_portfolio.scss
@@ -127,6 +127,8 @@ body.project {
     @include item-detail();
 
     #main {
+        display: flex;
+        flex-direction: column;
         p.summary {
             margin-bottom: ($spacer-vertical * 2);
         }
